third_party/move/move-compiler-v2/tests/folding/constant_public.exp

Diagnostics:
error: invalid modifier
  ┌─ tests/folding/constant_public.move:3:5
  │
3 │     public const Foo: u64 = 0;
  │     ^^^^^^ Invalid constant declaration. Constants cannot have visibility modifiers as they are always internal
